--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -25,7 +25,7 @@
         font-size: 0.6rem;
     }
     .ChangePageBox {
-        margin: 0 auto;
+        margin: 0.2em auto;
         width: 20em;
         font-size: 1.2em;
         button, p {
